--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-star-rating-component": "^1.4.1",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
